Deployment/nginx/deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: front-react:1.1
