Deployment/nginx/svc-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: prod
  labels:
    app: front
spec:
  type: LoadBalancer
  ports:
   - port: 3000
  selector:
   app: front
