Deployment/nginx/java-spring-ing.yaml
apiVersion: networking.k8s.io/v1  
kind: Ingress  
metadata:  
  name: java-spring-ing 
  namespace: prod
#  annotations:  
#    kubernetes.io/ingress.class: nginx
spec:  
  ingressClassName: nginx
  rules:  
    - host: api.enginedevops.ir
      http:  
        paths:  
          - path: /  
            pathType: Prefix  
            backend:  
              service:  
                name: java-spring 
                port:  
                  number: 8080
