Deployment/nginx/react-front-ing-ssl.yaml
apiVersion: networking.k8s.io/v1  
kind: Ingress  
metadata:  
  name: react-front-ing   
  namespace: prod  
spec:  
  ingressClassName: nginx  
  tls:                     
    - hosts:  
        - enginedevops.ir     
      secretName: cloudflare-ssl 
  rules:  
    - host: enginedevops.ir  
      http:  
        paths:  
          - path: /  
            pathType: Prefix  
            backend:  
              service:  
                name: react-front   
                port:  
                  number: 3000  
          - path: /api/todos/  
            pathType: Prefix  
            backend:  
              service:  
                name: python-django  
                port:  
                  number: 8000  
#          - path: /api/todos  
#            pathType: Prefix  
#            backend:  
#              service:  
#                name: java-spring   
#                port:  
#                  number: 8080
